fix(ui5-li-notification-group): align prio icon

--- a/packages/fiori/src/themes/NotificationListGroupItem.css
+++ b/packages/fiori/src/themes/NotificationListGroupItem.css
@@ -28,7 +28,7 @@
 }
 
 .ui5-nli-group-toggle-btn {
-	margin-right: 1rem;
+	margin-right: 0.75rem;
 	cursor: pointer;
 }
 
